# efxclipse-drift

./: .gitignore  .travis.yml  Development.md  LICENSE.md  README.md  build.gradle  gradle.properties  pom.xml  settings.gradle  versioning.gradle
native/: CMakeLists.txt  build.gradle
native/DriftFX/: CMakeLists.txt
native/DriftFX/include/DriftFX/: Context.h  DriftFXSurface.h  RenderTarget.h  Texture.h
native/DriftFX/include/DriftFX/GL/: GLContext.h  GLDebug.h  GLTexture.h
native/DriftFX/include/DriftFX/math/: Vec2.h
native/DriftFX/src/: Common.h  Configuration.cpp  Configuration.h  FrameManager.cpp  FrameManager.h  GLRenderTarget.cpp  GLRenderTarget.h  JNINativeSurface.cpp  JNINativeSurface.h  MainMemorySharedTexture.cpp  MainMemorySharedTexture.h  NativeSurface.cpp  NativeSurface.h  NativeSurfaceAPI.cpp  NativeSurfaceRegistry.cpp  NoOpTransferMode.cpp  NoopSharedTexture.cpp  NoopSharedTexture.h  Phun.cpp  ShareManager.cpp  ShareManager.h  SharedTexture.cpp  SharedTexture.h  SharedTexturePool.cpp  SharedTexturePool.h  SurfaceData.h  Texture.cpp  TransferModeManager.cpp  TransferModeManager.h  jni_D3DBatch.cpp  jni_GL.cpp
native/DriftFX/src/gl/: GLContext.cpp  GLTexture.cpp  InternalGLContext.cpp  InternalGLContext.h
native/DriftFX/src/gl/cgl/: CGLGLContext.cpp  CGLGLContext.h
native/DriftFX/src/gl/glx/: GLXGLContext.cpp
native/DriftFX/src/gl/wgl/: WGLGLContext.cpp  WGLGLContext.h
native/DriftFX/src/jni/macos/: MacOS.cpp  cgl_context.h
native/DriftFX/src/jni/win32/: D3D9.cpp  Win32.cpp
native/DriftFX/src/prism/: PrismBridge.cpp  PrismBridge.h
native/DriftFX/src/prism/d3d/: D3DMainMemorySharedTexture.cpp  D3DNativeSurface.cpp  D3DNativeSurface.h  D3DPrismBridge.cpp  D3DPrismBridge.h  D3DShareManager.cpp  D3DShareManager.h  D3DSharedFallbackTexture.cpp  D3DSharedFallbackTexture.h  D3DSharedTexture.cpp  D3DSharedTexture.h  LegacyWinFallbackTransferMode.cpp  MainMemoryTransferMode.cpp  NVDXInteropTransferMode.cpp  NativeAPI.cpp
native/DriftFX/src/prism/es2/: ES2MainMemorySharedTexture.cpp  ES2NativeSurface.cpp  ES2PrismBridge.cpp  ES2PrismBridge.h  MainMemoryTransferMode.cpp
native/DriftFX/src/win32/: D3D9ExContext.cpp  D3D9ExContext.h  D3D9Texture.cpp  Error.h
native/cmake/: FindWindowsSDK.cmake
native/driftcpp/: build.gradle
native/driftcpp/src/: driftcpp.cpp
native/driftcpp/src/main/cpp/: driftcpp.cpp
native/driftcpp/src/main/headers/: driftcppint.h
native/driftfx/: build.gradle
native/driftfx/src/main/cpp/: MemoryStack.cpp  jni_GL.cpp
native/driftfx/src/main/headers/: DriftGL_cgl.h  Export.h
native/lib/DriftGL/include/: DriftGL_gen.h  DriftGL_wgl.h
native/lib/DriftGL/test/: Test.h
native/lib/glew/: CMakeLists.txt
native/lib/glew/include/GL/: glew.h
native/lib/utils/: CMakeLists.txt
native/lib/utils/include/utils/: JNIHelper.h  Logger.h
native/lib/utils/src/: JNIHelper.cpp  Logger.cpp
native/samples/: CMakeLists.txt  SimpleColorRenderer.cpp  SimpleColorSample.cpp  SimpleTriangleRenderer.cpp
native/samples-old/: CMakeLists.txt  SimpleColor.cpp  SimpleTriangleRenderer.cpp
native/samples/minctx/include/: minctx.h
native/samples/minctx/src/: minctx_win32.cpp
native2/: CMakeLists.txt
native2/DriftFX/: CMakeLists.txt
native2/DriftFX/include/DriftFX/GL/: GLContext.h  GLTexture.h
native2/DriftFX/src/: DriftFXSurface.cpp  FrameManager.cpp  FrameManager.h  JNINativeSurface.cpp  JNINativeSurface.h  MainMemorySharedTexture.cpp  NativeSurface.cpp  NativeSurface.h  NativeSurfaceAPI.cpp  NativeSurfaceRegistry.h  NoOpTransferMode.cpp  NoopSharedTexture.cpp  SharedTexture.cpp  SharedTexturePool.cpp  SharedTexturePool.h  SharedTextureSwapChain.cpp  SharedTextureSwapChain.h  TransferModeManager.cpp  TransferModeManager.h  jni_GL.cpp
native2/DriftFX/src/2/: jni_GL.cpp
native2/DriftFX/src/gl/wgl/: WGLGLContext.cpp
native2/DriftFX/src/jni/: JNISwapChain.cpp  JNISwapChain.h
native2/DriftFX/src/jni/win32/: D3D9.cpp  D3DContext.h  Prism.cpp
native2/DriftFX/src/ng/: D3DBatch.cpp  GL.cpp  GLESMainMemoryTransferMode.cpp  SYS.cpp  gl_context.h  gl_context_glx.cpp  gl_context_jni.cpp  gl_context_procs.cpp  gl_context_procs.h  gl_context_wgl.cpp
native2/DriftFX/src/ng/native-prism-d3d/: D3DContext.h
native2/DriftFX/src/prism/: PrismBridge.cpp  PrismBridge.h
native2/DriftFX/src/prism/d3d/: D3DNativeSurface.h  D3DPrismBridge.cpp  D3DPrismBridge.h  D3DSharedFallbackTexture.cpp  D3DSharedTexture.cpp  D3DSharedTexture.h  LegacyWinFallbackTransferMode.cpp  MainMemoryTransferMode.cpp  NVDXInteropTransferMode.cpp
native2/DriftFX/src/prism/es2/: ES2PrismBridge.cpp  MainMemoryTransferMode.cpp  (+1 more)
native2/DriftFX/src/win32/: D3D9Texture.h  Error.h
native2/driftcpp/: CMakeLists.txt
native2/driftcpp/include/DriftFX/: Export.h  driftcpp.h
native2/driftcpp/src/: driftcpp.cpp  driftcppint.h
native2/lib/DriftGL/: CMakeLists.txt
native2/lib/DriftGL/include/: DriftGL.h  DriftGL_cgl.h  DriftGL_gen.h  DriftGL_glx.h  DriftGL_wgl.h  Export.h
native2/lib/DriftGL/src/: DriftGL_cgl.cpp  DriftGL_gen.cpp  DriftGL_glx.cpp  DriftGL_wgl.cpp
native2/lib/DriftGL/test/: Test.h  create_context.cpp  initialize.cpp
native2/lib/utils/src/: Logger.cpp
native2/samples/: CMakeLists.txt  SimpleColor.cpp  SimpleColorSample.cpp  SimpleTriangleSample.cpp
native2/samples-old/: SwapChainColorRenderer.cpp
native2/samples/minctx/src/: minctx_win32.cpp
org.eclipse.fx.drift.samples/src-native/: CMakeLists.txt  SimpleColorRenderer.cpp  SimpleTriangleRenderer.cpp
org.eclipse.fx.drift/src-native/: CMakeLists.txt
org.eclipse.fx.drift/src-native/DriftFX/: CMakeLists.txt
org.eclipse.fx.drift/src-native/DriftFX/src/: Common.cpp  Common.h  Context.cpp  DriftFXSurface.cpp  InternalDriftFX.cpp  InternalDriftFX.h  JNINativeSurface.cpp  JNINativeSurface.h  NativeSurface.cpp  NativeSurface.h  NativeSurfaceAPI.cpp  NativeSurfaceRegistry.cpp  NativeSurfaceRegistry.h  Phun.cpp  RenderTarget.cpp  SharedTexture.cpp  SharedTexture.h  Texture.cpp
org.eclipse.fx.drift/src-native/lib/glew/: CMakeLists.txt
org.eclipse.fx.drift/src-native/lib/utils/: CMakeLists.txt
(+369 files in other folders)
